# qwcx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  Vagrantfile
.github/workflows/: ci.yml
cmake/qwcx/: CompilerSettings.cmake  Credentials.cmake  Dependencies.cmake  Platform.cmake  Utils.cmake
lib/: CMakeLists.txt
lib/QWCX/Controls/: CMakeLists.txt  qmlcontrols.qrc  qmlcontrols_plugin.cpp  qmlcontrols_plugin.h  qmlcontrolsplugin.cpp  qmldir  qrcodeitem.cpp  qrcodeitem.h  qrcodescanner.cpp  qrcodescanner.h  qwcxcontrolsplugin.cpp  qwcxcontrolsplugin.h  qwcxcontrolsplugin.qrc
lib/QWCX/Controls/Fluid/: CMakeLists.txt  qmldir  qwcxcontrolsfluidplugin.cpp  qwcxcontrolsfluidplugin.h  qwcxcontrolsfluidplugin.qrc  qwcxcontrolsfluidstyle.cpp  qwcxcontrolsfluidstyle_p.h
lib/QWCX/Controls/Fluid/internal/: MaterialStyleAdapter.qml  UniversalStyleAdapter.qml
lib/QWCX/Controls/Materialized/: Button.qml
lib/QWCX/Controls/imports/containers/: Card.qml  ResponsivePage.qml  TabView.qml
lib/QWCX/Controls/imports/controls/: CarouselDelegate.qml  Heading.qml  OutlinedButton.qml
lib/QWCX/Controls/imports/controls/+material/: CarouselDelegate.qml  Heading.qml  OutlinedButton.qml  QwcTransactionDelegate.qml
lib/QWCX/Controls/imports/qwc/: QwcTransactionDelegate.qml  QwcWalletDelegate.qml  QwcWalletListView.qml
lib/QWCX/Controls/imports/styles/Materialized/: Frame.qml
lib/QWCX/Controls/imports/typography/: Caption.qml  Headline.qml  Subtitle.qml
lib/QWCX/Controls/qml/controls/+material/: Heading.qml
lib/QWCX/Core/: CMakeLists.txt  plugins.qmltypes  qmldir  qwcx.cpp  qwcx.h  qwcxcoreplugin.cpp  qwcxcoreplugin.h  qwcxcoreplugin.qrc  qwcxmnemonics.cpp  qwcxmnemonics.h
lib/QWCX/Core/imports/: QwcxMetadata.qml
lib/QWCX/Core/private/: abstractlanguage.h  chinesesimplifiedlanguage.h  dutchlanguage.h  englishlanguage.h  frenchlanguage.h  germanlanguage.h  italianlanguage.h  japaneselanguage.h  polishlanguage.h  portugueselanguage.h  russianlanguage.h  spanishlanguage.h  ukrainianlanguage.h
lib/QWCX/Global/: CMakeLists.txt  constants.cpp  constants.h
lib2/QWCX/Controls/: qmlcontrols.qmltypes  qmlcontrols.qrc  qmlcontrolsplugin.h
lib2/QWCX/Controls/imports/controls/: CarouselView.qml  QwcTransactionDelegate.qml
lib2/QWCX/Controls/imports/controls/+material/: CarouselView.qml  QwcTransactionListView.qml
scripts/ci/: linux.sh  linux_android.sh  win32.ps1  win64.ps1
src/: CMakeLists.txt
src/qml/: main.qml  main.qrc
src/qml/Pages/: FundsRequestPage.qml  MainPage.qml  WelcomePage.qml
src/qml/Views/: BalanceView.qml  CommunityView.qml  EcosystemView.qml  FundsRequestView.qml  FundsTransferView.qml  RecipientsView.qml  ScannerCameraView.qml  ScannerView.qml  SettingsView.qml  TransactionDetailsView.qml  TransactionHistoryView.qml
src/qwcx/: CMakeLists.txt
src/qwcx/qml/: main.qml  main.qrc  main_desktop.qml  main_mobile.qml
src/qwcx/qml/Pages/: BalancePage.qml  ChatPage.qml  FundsTransferPage.qml  SettingsPage.qml  TransactionDetailsPage.qml  TransactionHistoryPage.qml  WalletRestorationPage.qml
src/qwcx/resources/: resources.qrc
src/qwcx/resources/icons/MaterialIcons/: index.theme
src/resources/: qtquickcontrols2.conf  resources.qrc
src/resources/icons/LineAwesome/: index.theme
src/resources/icons/MaterialIcons/: index.theme
src2/qwcx/qml/Pages/: QrCodeScannerPage.qml  RecipientsPage.qml  WalletCreationPage.qml
