# Framework

set(${PROJECT_NAME_CAMELCASE}_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}")
set(${PROJECT_NAME_CAMELCASE}_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}" PARENT_SCOPE)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME_CAMELCASE}/Controls")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME_CAMELCASE}/Controls/Fluid")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME_CAMELCASE}/Core")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME_CAMELCASE}/Global")
